# 2DFlightSimulator

./: .gitignore  CMakeLists.txt
.github/workflows/: release.yml
FlightDynamics/: CMakeLists.txt
FlightDynamics/src/: integrator.cpp  integrator.hpp  main.cpp  main_gui.cpp
FlightDynamics/tests/: integrator_tests.cpp
config/: 2yp.json  aircraft_config.json  aircraft_heavy.json  aircraft_light.json
src/: gui_main.cpp  main.cpp  main_gui.cpp
src/aerodynamics/: aero.cpp  aero.hpp  aero_data.hpp
src/aircraft/: aircraft.hpp  aircraft_loader.hpp
src/graphics/: camera.hpp  flight_renderer.hpp  ui_panels.hpp
src/input/: camera_input.hpp
src/simulation/: physics_update.hpp  simulation_state.hpp
src/utils/: aircraft_config_manager.hpp
tests/: aero_tests.cpp  atmos_tests.cpp  integrator_tests.cpp  pid_tests.cpp
